2005-08-26  Florian Boor  <florian.boor@kernelconcepts.de>

    * gstplayer.c, player.h: Change setup to use decodebin instead of spider.

2005-08-02  Florian Boor  <florian.boor@kernelconcepts.de>

	* gpe-nmf.c, backend/playlist_db.h,
      backend/playlist_m3u.c: Applied patch to save playlist on exit. 
	                          Contributed by Alberto García Hierro (Skyhusker).

2005-08-01  Florian Boor  <florian.boor@kernelconcepts.de>

    * gstplayer.c, frontend.h: Apply Skyhusker's patch to fix a segfault.
                               Add (maybe broken) volume reading from 
                               gestreamer, fix minor bugs.
    * gpe-nmf.c: Remove obsolete style code to make gpe-nmf themable.

2005-04-21  Florian Boor  <florian.boor@kernelconcepts.de>

    * Released Version 0.21
    * gpe-nmf.c: Some minor fixes.

2005-04-20  Florian Boor  <florian.boor@kernelconcepts.de>

    * gpe-nmf.c: Major UI fixes using a table layout.
    * gpe-nmf.c, gstplayer.c: Add note, formating fixes.

2005-04-19  Florian Boor  <florian.boor@kernelconcepts.de>

    * gstplayer.c, gpe-nmf.c, frontend.h: Fixed position slider functionality.
    * gpe-nmf.c: Implemented unpause using pause button.
    * playlist-edit.c, gpe-nmf.c, gstplayer.c: Improved failure behaviour.
	* gstplayer.c: Avoid assertions, fix error callback to avoid segfault, 
                   fix formating.
    * gstplayer.c, gpe-nmf.c: Some changes that might help to fix the slider.
    * gstplayer.c: Remove some useless lines.

2005-04-17  Florian Boor  <florian.boor@kernelconcepts.de>

    * gpe-nmf.c, playlist-edit.c: GUI improvements:
      - Don't load useless icons.
      - Use correct stock icons.
      - Don't use fixed playlist toolbar layout.
      - Implement selecting of multiple items.
      - fixed warning about const type
      - add ok button
      - fixed tooltips text
    * frontend.h, playlist-edit.c: Remember last path.
    * gpe-nmf.c: Re-Enable slider - we really want to fix it.